--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "noahkimDev",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.3",
     "express": "^4.18.2",
     "mongoose": "^8.1.1"
   },
