--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/index.js"
+    "back": "nodemon server/dist/index.js",
+    "dev": "concurrently \"npm run back\"  \"npm run start --prefix client\" "
   },
   "keywords": [],
   "author": "noahkimDev",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
